--- a/main.css
+++ b/main.css
@@ -70,3 +70,23 @@ table.annotations>tbody>tr>td {
 .checkbox-container label {
     font-size: 1.5em;
 }
+
+#loader {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.3s;
+    opacity: 1;
+}
+
+#loading-text {
+    font-size: 24px;
+    color: white;
+}
