--- a/main.css
+++ b/main.css
@@ -95,3 +95,7 @@ table.annotations>tbody>tr>td {
     font-size: 1.5em;
     padding: 8px 24px;
 }
+
+.highlighted {
+    background-color: #ffffdd; 
+}
